Made the slider responsive, revamped login and signup pages, fixed footer leaving whitespace bug

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -9,7 +9,4 @@
 
     width: 100%;
     padding: 20px;
-
-    /* This makes it grow when content is short */
-    flex-shrink: 0;
 }
